Replacing stream().toList() (Java 11 compatible)